@@ -1,6 +1,6 @@
 /*
  * OpenRemote, the Home of the Digital Home.
- * Copyright 2008-2011, OpenRemote Inc.
+ * Copyright 2008-2013, OpenRemote Inc.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -26,10 +26,10 @@ import java.math.RoundingMode;
 
 
 import org.openremote.controller.command.StatusCommand;
-import org.openremote.controller.component.EnumSensorType;
+import org.openremote.controller.model.sensor.Sensor;
+import org.openremote.controller.protocol.EventListener;
 import org.openremote.controller.protocol.knx.datatype.Bool;
 import org.openremote.controller.protocol.knx.datatype.DataPointType;
-import org.openremote.controller.protocol.knx.datatype.DataType;
 import org.openremote.controller.protocol.knx.datatype.Unsigned8Bit;
 import org.openremote.controller.protocol.knx.datatype.Float2Byte;
 import org.openremote.controller.protocol.knx.datatype.TwoOctetFloat;
@@ -39,11 +39,12 @@ import org.openremote.controller.utils.Strings;
 
 /**
  * Read command representing KNX Group Value Read service. This class implements the
- * {@link StatusCommand} interface and therefore acts as an entry point in controller/protocol SPI.
+ * {@link EventListener} interface and therefore acts as an entry point in controller/protocol SPI.
  *
  * @author <a href="mailto:juha@openremote.org">Juha Lindfors</a>
+ * @author <a href="mailto:marcus@openremote.org">Marcus Redeker</a>
  */
-class GroupValueRead extends KNXCommand implements StatusCommand
+class GroupValueRead extends KNXCommand implements EventListener
 {
 
 
@@ -61,6 +62,11 @@ class GroupValueRead extends KNXCommand implements StatusCommand
   private final static Map<String, ApplicationProtocolDataUnit> booleanCommandLookup =
       new ConcurrentHashMap<String, ApplicationProtocolDataUnit>();
 
+  /**
+   * Holds the sensor associated with this command
+   */
+  private Sensor sensor;
+  
   /*
    * IMPLEMENTATION NOTE:
    *
@@ -99,8 +105,6 @@ class GroupValueRead extends KNXCommand implements StatusCommand
     return new GroupValueRead(mgr, address, apdu, dpt);
   }
   
-
-
   // Constructors ---------------------------------------------------------------------------------
 
   /**
@@ -119,181 +123,139 @@ class GroupValueRead extends KNXCommand implements StatusCommand
   }
 
 
-  // Implements StatusCommand ---------------------------------------------------------------------
+  // Implements EventListener ---------------------------------------------------------------------
+
+  @Override public void setSensor(Sensor sensor)
+  {
+    this.sensor = sensor;
+    super.connectionManager.registerReadSensor(this);
+    
+    // The first value has to be retrieved with an actual read command
+    // All other updates are coming from listening for the group address of this command
+
+    super.triggerRead(this);
+  }
+
+
+  @Override public void stop(Sensor sensor)
+  {
+     super.connectionManager.unregisterReadSensor(this);
+  }
+
+
+
+  // Protected Instance Methods -------------------------------------------------------------------
 
   /**
    * TODO
    *
-   * @param sensorType
-   *
-   * @param statusMap
-   * @return
    */
-  public String read(EnumSensorType sensorType, Map<String, String> statusMap)
+  protected void updateSensor(ApplicationProtocolDataUnit.ResponseAPDU response)
   {
+    String result = null;
 
-    log.debug("Polling device status for " + this);
-
-    ApplicationProtocolDataUnit responseAPDU = super.read(this);
-
-    if (responseAPDU == null)
+    if (response == null)
     {
-        return "";      // TODO : check how caller handles invalid return values
+        result = Sensor.UNKNOWN_STATUS;
     }
-	
-    // Get the DataPointType from this object instead of from the APDU associated with 
+
+
+    // Get the DataPointType from this object instead of from the APDU associated with
     // the KNX command name.This will be the right type (that entered by the user as dpt in
     // the GUI.
+
     DataPointType dpt = getDataPointType();
-    DataType datatype = getAPDU().getDataType();
+    ApplicationProtocolDataUnit responseAPDU = response.resolve(dpt);
 
-    if (sensorType == EnumSensorType.SWITCH)
+    if (dpt == DataPointType.BooleanDataPointType.SWITCH)
     {
-      if (dpt == DataPointType.BooleanDataPointType.SWITCH)
-      {
-          Bool bool = (Bool)responseAPDU.getDataType();
-
-          if (bool == Bool.ON)
-          {
-            return "on";
-          }
-          else
-          {
-            return "off";
-          }
-      }
-
-      else
-      {
-        log.warn("Only support SWITCH sensor mapping to KNX Switch DPT (1.001)");
-
-        return "";    // TODO : check how caller handles invalid return types
-      }
-    }
-
-    else if (sensorType == EnumSensorType.LEVEL)
-    {
-      if (dpt == DataPointType.Unsigned8BitValue.SCALING)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        int resolution = valueDPT.resolve();
-
-        return Integer.toString(resolution);
-      }
-
-      else if (dpt == DataPointType.Unsigned8BitValue.ANGLE)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        return Integer.toString((int)(valueDPT.resolve() / 3.6));
-      }
-
-      else if (dpt == DataPointType.Unsigned8BitValue.RELPOS_VALVE)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        return Integer.toString((int)(valueDPT.resolve() / 2.55));
-      }
-
-      else if (dpt == DataPointType.Unsigned8BitValue.VALUE_1_UCOUNT)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        return Integer.toString((int)(valueDPT.resolve() / 2.55));
-      }
-
-      else if (dpt == DataPointType.Unsigned8BitValue.SCENE_NUMBER)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        return Integer.toString((int)(valueDPT.resolve()));
-      }
-      
-      else
-      {
-        throw new Error("Unrecognized datatype for LEVEL sensor: " + dpt);
-      }
-    }
-
-    else if (sensorType == EnumSensorType.RANGE)
-    {
-      // TODO :
-      //    need to merge the fixes that gives range min/max values so return values
-      //    can be scaled accordingly
-
-      if (dpt instanceof DataPointType.Unsigned8BitValue)
-      {
-        Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
-
-        return Integer.toString(valueDPT.resolve());
-      }
-
-      else if (dpt instanceof DataPointType.TwoOctetFloat)
-      {
-        TwoOctetFloat valueDPT = (TwoOctetFloat)responseAPDU.getDataType();
-
-        return Integer.toString(valueDPT.resolve().intValue());
-      }
-
-      else if (dpt instanceof DataPointType.Float2ByteValue)
-      {
-        Float2Byte valueDPT = (Float2Byte)responseAPDU.getDataType();
-
-        int resolution = (int)valueDPT.resolve();
-
-        return Integer.toString(resolution);
-      }
-
-      else
-      {
-        throw new Error("Currently only Unsigned 8 bit datatype supported for RANGE sensor type.");
-      }
-    }
-
-    else if (sensorType == EnumSensorType.CUSTOM)
-    {
-
-//      if (dpt == DataPointType.Float2ByteValue.VALUE_TEMP)
-//      {
-//        Float2Byte valueDPT = (Float2Byte)responseAPDU.getDataType();
-//
-//        float resolution = valueDPT.resolve();
-//        return Float.toString(resolution);
-//      }
-
-      if (dpt instanceof DataPointType.TwoOctetFloat)
-      {
-        TwoOctetFloat valueDPT = (TwoOctetFloat)responseAPDU.getDataType();
-
-        if (statusMap.containsKey("precision"))
+        Bool bool = (Bool)responseAPDU.getDataType();
+        if (bool == Bool.ON)
         {
-          String precision = statusMap.get("precision");
-
-          if (precision.equals("1") || precision.equals("0.1"))
-          {
-            return valueDPT.resolve().setScale(1, RoundingMode.HALF_UP).toString();
-          }
-
-          else if (precision.equals("2") || precision.equals("0.01"))
-          {
-            return valueDPT.resolve().setScale(2, RoundingMode.HALF_UP).toString();
-          }
+           result = "on";
         }
+        else
+        {
+           result = "off";
+        }
+    }
 
-        return valueDPT.resolve().setScale(1, RoundingMode.HALF_UP).toString();
+    else if (dpt == DataPointType.Unsigned8BitValue.SCALING)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      int resolution = valueDPT.resolve();
+      result = Integer.toString(resolution);
+    }
+
+    else if (dpt == DataPointType.Unsigned8BitValue.ANGLE)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      result = Integer.toString((int)(valueDPT.resolve() / 3.6));
+    }
+
+    else if (dpt == DataPointType.Unsigned8BitValue.RELPOS_VALVE)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      result = Integer.toString((int)(valueDPT.resolve() / 2.55));
+    }
+
+    else if (dpt == DataPointType.Unsigned8BitValue.VALUE_1_UCOUNT)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      result = Integer.toString((int)(valueDPT.resolve() / 2.55));
+    }
+
+    else if (dpt == DataPointType.Unsigned8BitValue.SCENE_NUMBER)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      result = Integer.toString((int)(valueDPT.resolve()));
+    }
+
+    else if (dpt instanceof DataPointType.Unsigned8BitValue)
+    {
+      Unsigned8Bit valueDPT = (Unsigned8Bit)responseAPDU.getDataType();
+      result = Integer.toString(valueDPT.resolve());
+    }
+
+    else if (dpt instanceof DataPointType.Float2ByteValue)
+    {
+      Float2Byte valueDPT = (Float2Byte)responseAPDU.getDataType();
+      int resolution = (int)valueDPT.resolve();
+      result = Integer.toString(resolution);
+    }
+
+    else if (dpt instanceof DataPointType.TwoOctetFloat)
+    {
+      TwoOctetFloat valueDPT = (TwoOctetFloat)responseAPDU.getDataType();
+
+      Map<String, String> statusMap = sensor.getProperties();
+
+      if (statusMap.containsKey("precision"))
+      {
+        String precision = statusMap.get("precision");
+
+        if (precision.equals("1") || precision.equals("0.1"))
+        {
+           result = valueDPT.resolve().setScale(1, RoundingMode.HALF_UP).toString();
+        }
+        else if (precision.equals("2") || precision.equals("0.01"))
+        {
+           result = valueDPT.resolve().setScale(2, RoundingMode.HALF_UP).toString();
+        }
       }
 
       else
       {
-        throw new Error("Unrecognized datapoint type " + dpt + " on CUSTOM sensor.");
+        result = valueDPT.resolve().setScale(1, RoundingMode.HALF_UP).toString();
       }
     }
 
     else
     {
-      throw new Error("Unrecognized sensor type " + sensorType);
-
+      throw new Error("Unrecognized datapoint type: " + dpt);
     }
+
+    sensor.update(result);
   }
+
 }
